fix image size on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -278,6 +278,7 @@ body {
 	img {
 		width: 100%;
 		height: 100%;
+		object-fit: contain;
 	}
 
 	&:hover {
